// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSharedHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-e30b19b2-0 fgBWrW djyvKT iAkSYx bALFzl"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-e30b19b2-1 fgBWrW joHkzz dGlNMa ktQrYa"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`AboutSharedHeader renders correctly with no image 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-e30b19b2-0 fgBWrW djyvKT iAkSYx bALFzl"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-e30b19b2-1 fgBWrW joHkzz dGlNMa ktQrYa"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`WhoAreWeHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-2d955e38-0 fgBWrW djyvKT iAkSYx ciaslw"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`WhoAreWeHeader renders correctly with no image 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR ieiSrW"
      style="max-width: 1360px;"
    >
      <div
        class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
      >
        <div
          class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-2d955e38-0 fgBWrW djyvKT iAkSYx ciaslw"
        >
          <div
            class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
          >
            <h1
              class="sc-kpDqfm cRJejs"
            >
              <span
                class="sc-dAlyuH bOvjMx"
              >
                TESTING_TITLE
              </span>
            </h1>
            <p
              class="sc-dLMFU hxKUrX"
            >
              TESTING_CONTENT
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
